feat(backend): implementar funções avançadas de busca de posts e melhorar segurança
Implementações no backend:
- Adicionar métodos no PostRepository: buscarPostsRecomendadosParaUsuario, buscarPostsPorLegenda, findPopularPostsFromFollowing e findPostsTendencias
- Criar respectivos services e controllers para as novas funcionalidades de busca
- Aprimorar segurança com implementação de CustomAccessDeniedHandler e CustomAuthenticationEntryPoint seguindo boas práticas
- Refatorar JwtService para melhor desempenho e segurança
- Adicionar migrations V14__inserir_posts_tendencias.sql e V15__inserir_posts_recomendados.sql

Melhorias no frontend:
- Configurar corretamente o interceptor HTTP
- Aprimorar TokenService para gerenciamento mais eficiente de autenticação
- Integrar feed com backend para exibição de posts
- Implementar Explore component utilizando PostService para buscar dados
- Adicionar DatePipes para formatação de datas
- Configurar services para consumir endpoints de busca de posts por legenda, tendência, populares e recomendados

Essas alterações proporcionam uma aplicação mais completa e segura, com funcionalidades avançadas de busca e exibição de conteúdo personalizado.
