# newgram-ui/src/app/services/models.ts
@@ -2,15 +2,15 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export { ArquivoDto } from './models/arquivo-dto';
-export { LoginDto } from './models/login-dto';
-export { Page } from './models/page';
-export { Pageable } from './models/pageable';
-export { PageableObject } from './models/pageable-object';
-export { PostCreateDto } from './models/post-create-dto';
-export { PostResponseDto } from './models/post-response-dto';
-export { PostUpdateDto } from './models/post-update-dto';
-export { SortObject } from './models/sort-object';
-export { TokenDto } from './models/token-dto';
-export { UsuarioCreateDto } from './models/usuario-create-dto';
-export { UsuarioSummaryDto } from './models/usuario-summary-dto';
+export type{ ArquivoDto } from './models/arquivo-dto';
+export type{ LoginDto } from './models/login-dto';
+export type{ Page } from './models/page';
+export type{ Pageable } from './models/pageable';
+export type{ PageableObject } from './models/pageable-object';
+export type{ PostCreateDto } from './models/post-create-dto';
+export type{ PostResponseDto } from './models/post-response-dto';
+export type{ PostUpdateDto } from './models/post-update-dto';
+export type{ SortObject } from './models/sort-object';
+export type{ TokenDto } from './models/token-dto';
+export type{ UsuarioCreateDto } from './models/usuario-create-dto';
+export type { UsuarioSummaryDto } from './models/usuario-summary-dto';
